--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-AIPIPE_TOKEN=<your-aipipe-token>
-AIPIPE_EMBEDDING_ENDPOINT = https://aipipe.org/openai/v1/embeddings
-
+AIPIPE_API_KEY=your-actual-aipipe-token
+AIPIPE_API_URL=https://aipipe.org/openai/v1/embeddings
