--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 AIPIPE_API_KEY=your-actual-aipipe-token
 AIPIPE_API_URL=https://aipipe.org/openai/v1/embeddings
+AIPIPE_COMPLETION_URL=https://aipipe.org/openai/v1/chat/completions
