--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 AIPIPE_API_KEY=your-actual-aipipe-token
-AIPIPE_API_URL=https://aipipe.org/openai/v1/embeddings
+AIPIPE_EMBEDDING_ENDPOINT=https://aipipe.org/openai/v1/embeddings
